[tool.poetry]
name = "vvp"
version = "0.1.0"
description = "a tool that help you manage your verilog moduels"
authors = ["paohui <2054453988@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
